--- a/.github/workflows/linkTrelloCard.yml
+++ b/.github/workflows/linkTrelloCard.yml
@@ -12,7 +12,7 @@ jobs:
         - name: pegar_o_valor_depois_de_-pr#
           run: |
             PR_TITLE="${{ github.event.pull_request.title }}"
-            if [[ $PR_TITLE =~ -tc#([0-9]+) ]];s then
+            if [[ $PR_TITLE =~ -tc#([0-9]+) ]]; then
                echo "tc_number=${BASH_REMATCH[1]}" >> $GITHUB_ENV
             else
                echo "tc_number=not_found" >> $GITHUB_ENV
