--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -8,6 +8,9 @@ jobs:
     Continuos_Deploy:
         runs-on: ubuntu-latest
         steps:
+            - name: Check_Page
+              uses: actions/checkout@v4
+              
             - name: Deploy_Page
               uses: JamesIves/github-pages-deploy-action@v4.6.9
               with:
