github actions e variaveis deploy 6

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,8 +7,18 @@ on:
 permissions: 
     contents: write
 jobs:
-    Continuos_Deploy:
+    Build:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Upload_Do_Aterfato
+          # id: build
+          uses: actions/upload-pages-artifact@v3
+          with: 
+            path: src/
+
+    Deploy:
         runs-on: ubuntu-latest
+        needs: Build
         permissions: 
           pages: write
           id-token: write
@@ -26,15 +36,8 @@ jobs:
             #   with: 
             #     #falta o token // MÃO TEM A CERTIFICAÇÃO
             #     publish_dir: ./public  
-            
-            - name: Upload_Do_Aterfato
-              # id: build
-              uses: actions/upload-pages-artifact@v3
-              with: 
-                path: src/
 
             - name: Deploy_Mais_Certo
               uses: actions/deploy-pages@v4.0.5
               with:
                   token: ${{github.token}}
-                  artifact_name: gh-pages
