--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -44,3 +44,4 @@ jobs:
               uses: actions/deploy-pages@v4.0.5
               with:
                   token: ${{github.token}}
+                  timeout: 30.000
