github actions e variaveis deploy OUTPUT 2

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -44,6 +44,7 @@ jobs:
             #     publish_dir: ./public   
 
             - name: Deploy_Mais_Certo
+              id: deployment
               uses: actions/deploy-pages@v4.0.5
               with:
                   token: ${{github.token}}
