--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -9,7 +9,9 @@ permissions:
 jobs:
     Build:
       runs-on: ubuntu-latest
-      # permissions:  
+      environment: 
+        name: ado
+        url: https://google.com
       steps:
         - name: Check_Page
           uses: actions/checkout@v4
