--- a/.github/workflows/logger.yml
+++ b/.github/workflows/logger.yml
@@ -6,26 +6,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
+        id: GitHub
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+        run: echo "$GITHUB_
+        
       - name: Dump job context
+        id: job
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
+        run: echo "$JOB_
+        
       - name: Dump steps context
+        id: steps
         env:
           STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
+        run: echo "$STEPS_
+        
       - name: Dump runner context
+        id: runner
         env:
           RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
+        run: echo "$RUNNER_
+        
       - name: Dump strategy context
+        id: strategy
         env:
           STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
+        run: echo "$STRATEGY_
+        
       - name: Dump matrix context
+        id: matrix
         env:
           MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
+        run: echo "$MATRIX_
+        
