github actions link pr

--- a/.github/workflows/linkTrelloCard.yml
+++ b/.github/workflows/linkTrelloCard.yml
@@ -6,16 +6,22 @@ jobs:
   Link-Trello-Card:
     runs-on: ubuntu-latest
     steps:
-        - run: echo "ado a"
-        - name: checar_o_codigo
-          uses: actions/checkout@v4
-        - name: pegar_o_valor_depois_de_-pr#
-          run: |
-            PR_TITLE="${{ github.event.pull_request.title }}"
-            if [[ $PR_TITLE =~ -tc#([0-9]+) ]]; then
-               echo "tc_number=${BASH_REMATCH[1]}" >> $GITHUB_ENV
-            else
-               echo "tc_number=not_found" >> $GITHUB_ENV
-            fi
-        - name: printar_o_valor_em_outro_step
-          run: echo "o valor que foi enviado é $tc_number"
+        # - run: echo "ado a"
+        # - name: checar_o_codigo
+        #   uses: actions/checkout@v4
+        # - name: pegar_o_valor_depois_de_-pr#
+        #   run: |
+        #     PR_TITLE="${{ github.event.pull_request.title }}"
+        #     if [[ $PR_TITLE =~ -tc#([0-9]+) ]]; then
+        #        echo "tc_number=${BASH_REMATCH[1]}" >> $GITHUB_ENV
+        #     else
+        #        echo "tc_number=not_found" >> $GITHUB_ENV
+        #     fi
+        # - name: printar_o_valor_em_outro_step
+        #   run: echo "o valor que foi enviado é $tc_number"
+        - name: link_card
+          uses: rematocorp/trello-integration-action@v9.8.3
+          with:
+            github-token: ${{github.token}}
+            trello-api-key: ${{ secrets.TRELLO_API_KEY }}
+            trello-auth-token: ${{ secrets.TRELLO_AUTH_TOKEN }}
