github actions link pr 3

--- a/.github/workflows/linkTrelloCard.yml
+++ b/.github/workflows/linkTrelloCard.yml
@@ -1,7 +1,11 @@
 name: Linkar Cartão
 run-name: Linkar Cartão
 on: 
-    pull_request
+  pull_request: 
+    types: 
+      - opened
+      - reopened
+
 jobs:
   Link-Trello-Card:
     runs-on: ubuntu-latest
