--- a/.github/workflows/linkTrelloCard.yml
+++ b/.github/workflows/linkTrelloCard.yml
@@ -36,4 +36,4 @@ jobs:
             github-include-pr-branch-name: true
             github-include-pr-comments: false
             github-enable-related-keyword-prefix: true
-            github-require-trello-card: true
+            # github-require-trello-card: true #talvez isso procure somente links
